Fixed minor alignment issues

--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -19,6 +19,7 @@
     margin-left: 30px;
     font-size: 25px;
     font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .dropdown {
